<resources>
    <string name="app_name">My Application</string>

    <string name="post_error">An error occurred while loading the posts</string>


    <string name="retry">Retry</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="valid_email">Enter Valid Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="dont_account">Don"'"t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="valid_password">Enter Valid Password</string>

    <string name="ok">Ok</string>

</resources>
