<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.example.myapplication.ui.login.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".MainActivity">

        <ImageView
                android:layout_width="wrap_content"
                android:adjustViewBounds="true"
                android:layout_height="256dp"
                android:layout_margin="50dp"
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                android:layout_marginTop="28dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="15"
                android:text="@={ viewModel.emailTxt}"
                android:hint="@string/email"
                android:background="@drawable/login_round_rect_et"
                android:id="@+id/email_et"
                android:layout_marginStart="@dimen/activity_margin"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/activity_margin"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:ems="15"
                android:text="@={ viewModel.passwordTxt}"


                android:hint="@string/password"
                android:background="@drawable/login_round_rect_et"
                android:id="@+id/password_et"
                android:layout_marginStart="@dimen/activity_margin"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/activity_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email_et"
        />
        <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/login_forget_text"
                android:text="@string/forget_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/password_et" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/signin_tv"/>

        <Button
                android:text="@string/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:id="@+id/signin_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/activity_margin" app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:onClick="@{() -> viewModel.signInButtonClicked()}"
                android:layout_marginEnd="@dimen/activity_margin" android:background="@drawable/login_round_rect"
                android:layout_marginBottom="36dp" app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintHorizontal_bias="0.0"
        />
        <!--android:onClick="@{viewModel::signInClick}"-->
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="124dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/login_bottom_bg"
                android:id="@+id/constraintLayout">

            <TextView
                    android:text="@string/dont_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/textView" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintBottom_toTopOf="@+id/button2" android:layout_marginBottom="8dp"/>
            <Button
                    android:text="@string/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:onClick="@{() -> viewModel.signUpButtonClicked()}"
                    android:id="@+id/button2" android:layout_marginStart="@dimen/activity_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/activity_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.675"
                    android:background="@drawable/login_round_rect"/>

        </android.support.constraint.ConstraintLayout>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
                android:id="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.498"/>


    </android.support.constraint.ConstraintLayout>
</layout>